--- a/style1.css
+++ b/style1.css
@@ -80,7 +80,7 @@ body {
 }
  
 svg {
-    background-color:#F5F5DC ;
+    
   width: 100%;
   height: 60%;
 }
@@ -89,7 +89,7 @@ svg {
 .education {
     height: 100%;
     font: 12em/1 Arial;
-    padding:50px 0 0 0;
+    padding:200px 0 0 0;
 }
 .text-copy {
   fill: none;
@@ -100,7 +100,7 @@ svg {
           animation: stroke-offset 9s infinite linear;
 }
 .text-copy:nth-child(1) {
-  stroke: #008080;
+  stroke: #8B0000;
   stroke-dashoffset: 7%;
 }
 .text-copy:nth-child(2) {
@@ -112,7 +112,7 @@ svg {
   stroke-dashoffset: 21%;
 }
 .text-copy:nth-child(4) {
-  stroke: #008080;
+  stroke: #8B0000;
   stroke-dashoffset: 28%;
 }
 .text-copy:nth-child(5) {
@@ -134,11 +134,47 @@ svg {
   }
 }
 
+.paragraph{
+    text-align:justify;
+    font-size:13pt;
+    padding: 20px 325px 20px 325px;
+    float: right;
+    margin: 10px;
+}
+.photo{
+    
+    width :888;
+    height:500;
+    padding: 10px 0 30px 0;
+       display: block;
+         margin-left: auto;
+             margin-right: auto;
+}
+.header{
+    text-align:center;
+    font-size:100%;
+     padding: 15px 0 0 0;
+      font-weight: bold;
+
+}
+#style{
+    font-style: oblique;
+}
+.bullet
+{
+    type:circle
+    text-align:justify; 
+ font-size:13pt;
+    padding: 20px 125px 20px 125px;
+    float: right;
+    margin: 10px;}
 $body--Background: #F0F1F1;
 $icon-rocket--Color: #4F5D75;
 body{
   background-color: $body--Background;
 }
+
+
 .box {
   color: #222;
   align-items: center;
